--- a/Day-2/tracker-app/package.json
+++ b/Day-2/tracker-app/package.json
@@ -16,12 +16,14 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.10",
-    "nodemon": "^3.1.9",
+    "@types/pg": "^8.11.11",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "pg": "^8.14.0"
   }
 }
